# bukrs

./: .gitignore  Cargo.toml  README.md
bukrs/: Cargo.toml
bukrs-core/: Cargo.toml
bukrs-core/src/: lib.rs
bukrs-derive/: Cargo.toml
bukrs-derive/src/: lib.rs
bukrs-plugin/: build.gradle.kts  settings.gradle.kts
bukrs-plugin/bukrs-plugin/src/main/kotlin/me/dolphin2410/bukrs/: BukrsDecoder.kt  BukrsEvents.kt  BukrsPacketHandler.kt  Types.kt
bukrs-plugin/src/main/kotlin/me/dolphin2410/bukrs/: BukrsEncoder.kt  BukrsMain.kt  NettyServer.kt  Packets.kt  TypeCodec.kt  Util.kt
bukrs/src/: lib.rs  macros.rs  net.rs  varint.rs
bukrs/src/core/: invfx.rs  mod.rs  player.rs
