[package]
name = "bukrs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
bincode = "1.3.3"
bytes = "1.2.1"
erased-serde = "0.3.23"
futures = "0.3.25"
rand = "0.8.5"
serde = { version = "1.0.147", features = ["derive"] }
thiserror = "1.0.37"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
typetag = "0.2.3"
bukrs-core = { path = "../bukrs-core" }
bukrs-derive = { path = "../bukrs-derive" }
lazy_static = "1.4.0"
ctor = "0.1.26"

[[test]]
name = "test_target"
path = "src/test.rs"
